fixed layout problems

--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Monofett&family=Orbitron:wght@600&family=Press+Start+2P&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Geostar+Fill&family=Monofett&family=Orbitron:wght@600&family=Press+Start+2P&display=swap');
 * {
-    margin: 0;
     padding: 0;
+    margin: 10px;
+    border: none;
 }
 --root {
     --red: #f43545;
@@ -27,6 +28,7 @@ body {
     -moz-animation: fadeIn 1 1s ease-out;
     -o-animation: fadeIn 1 1s ease-out;
     animation: fadeIn 1 1s ease-out;
+    background-color: lightgray;
 }
 
 /*imports */
@@ -245,10 +247,6 @@ body {
 
 /* Background colour change */
 
-* {
-    margin: 0;
-    padding: 0;
-}
 
 /* Colors */
 
@@ -310,7 +308,7 @@ body {
     border-radius: 6rem;
     padding: 0.5rem;
     text-align: right;
-    margin-left: 2rem;
+    /* margin-left: 2rem; */
     height: 70px;
     width: 22rem;
     font-family: 'Press Start 2P', cursive;
@@ -342,7 +340,7 @@ body {
     color: #00ba71;
     border-radius: 20%;
     padding: 1.5rem;
-    margin-left: 4rem;
+    /* margin-left: 4rem; */
 }
 
 
@@ -374,11 +372,6 @@ body {
 
 /* Dj box */
 
-* {
-    margin: 10px;
-    padding: 0;
-    border: none;
-}
 
 a {
     text-decoration: none;
@@ -390,10 +383,6 @@ li {
     list-style: none;
 }
 
-
-body {
-    background-color: lightgray;
-}
 .qube_icons span {
     font-weight: bold;
     
@@ -475,8 +464,8 @@ body {
    
     position: relative;
     
-    width: 850px;
-    height: 850px;
+    max-width: 85%;
+    height: auto;
 
     border-radius: 5%;
 
